index.html modified

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <h3>Developer & <span>Programmer</span></h3>
             <p>I am both a front end and backend developer who 
                 is based in kenya. I am currently enrolled in Muringa school 
-                undertating my software development course.I make websites and that are 
-                responsive and can be vied by all users.
+                undertating my software development course.I make websites that are 
+                responsive and can be viewed by all users.
             </p>
             <button id="button2">Contact Me</button>
         </div>
